--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <div class="container">
         <input type="text" id="space" placeholder="">
         <br>
-        <button id=butt1>7</button>
-        <button id=butt2>8</button>
-        <button id=butt3>9</button>
-        <button id=butt4>4</button>
-        <button id=butt5>5</button>
-        <button id=butt6>6</button>
-        <button id=butt7>1</button>
-        <button id=butt8>2</button>
-        <button id=butt9>3</button>
-        <button id=butt0>0</button>
-        <button id=buttx>x</button>
-        <button id=butt->-</button>
-        <button id=buttp>+</button>
-        <button id=buttE>=</button>
-        <button id=buttdt>.</button>
-        <button id=buttD>/</button>
-        <button id= Delete>Del</button>
-        <button id= blank></button>
+        <button class="num" value="7" id=butt1>7</button>
+        <button class="num" value="8" id=butt2>8</button>
+        <button class="num" value="9" id=butt3>9</button>
+        <button class="num" value="4" id=butt4>4</button>
+        <button class="num" value="5" id=butt5>5</button>
+        <button class="num" value="6" id=butt6>6</button>
+        <button class="num" value="1" id=butt7>1</button>
+        <button class="num" value="2" id=butt8>2</button>
+        <button class="num" value="3" id=butt9>3</button>
+        <button class="num" value="0" id=butt0>0</button>
+        <button value="*" id=buttx>x</button>
+        <button value="-" id=butt->-</button>
+        <button value="+" id=buttp>+</button>
+        <button value="=" id=buttE>=</button>
+        <button value="." id=buttdt>.</button>
+        <button value="/" id=buttD>/</button>
+        <button value="" id= Delete>Del</button>
         
     </div>
     
+    <script src="/Javascript/index.js"></script>
 </body>
 </html>
