--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <button class="num" value="2" id=butt8>2</button>
         <button class="num" value="3" id=butt9>3</button>
         <button class="num" value="0" id=butt0>0</button>
-        <button value="*" id=buttx>x</button>
-        <button value="-" id=butt->-</button>
-        <button value="+" id=buttp>+</button>
-        <button value="=" id=buttE>=</button>
-        <button value="." id=buttdt>.</button>
-        <button value="/" id=buttD>/</button>
-        <button value="" id= Delete>Del</button>
+        <button class="spec" value="*" id=buttx>x</button>
+        <button class="spec" value="-" id=butt->-</button>
+        <button class="spec" value="+" id=buttp>+</button>
+        <button class="spec" value="=" id=buttE>=</button>
+        <button class="spec" value="." id=buttdt>.</button>
+        <button class="spec" value="/" id=buttD>/</button>
+        <button  value="spec" id= Delete>Del</button>
         
     </div>
     
